<resources>
    <string name="app_name">SocialBee</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_username">Nombre de Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">No tienes cuenta?,</string>
    <string name="create_here">Crea una aquí</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_email">Email</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_password_create_account">Contraseña</string>
    <string name="hint_confirm_password">Confirme contraseña</string>
    <string name="text_button_joinus">Unirse</string>
    <string name="text_button_register">Registrarse</string>

    <string name="text_info_title">Abren un curso gratuito para aprender sobre apicultura sustentable</string>
    <string name="text_info_detail_title">Se trata de una propuesta dinámica y participativa que no requiere de conocimientos previos. El curso del INTA arrancará el 4 de enero y ya se encuentra abierta su inscripción.</string>

    <string name="text_info_title2">Apicultura: los consejos para prevenir el COVID-19 en la preparación de colmenas</string>
    <string name="text_info_detail_title2">El Programa Nacional Apícola del INTA (PROAPI), junto a otras instituciones como SENASA y Universidades, desarrollaron una serie de recomendaciones en plena preparación de colmenas, para no perder productividad pero resguardando siempre la salud de los trabajadores.</string>

    <string name="text_info_title3">Declararon a las abejas como el animal más importante de la tierra</string>
    <string name="text_info_detail_title3">Así lo expresó el Earthwatch institute en la última reunión que mantuvo la Real Sociedad de Geografía de Londres. Se las eligió por lo fundamentales que son a la hora de la reproducción de las plantas.</string>
    <string name="title_initial">Inicio</string>
    <string name="title_search">Buscar</string>
    <string name="title_map">Mapa</string>

</resources>