<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_parrafo"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/imageViewHome"
                        android:scaleType="centerCrop"
                        android:src="@drawable/apicultura" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/marginHomeSuptitulo"
                        android:layout_marginTop="@dimen/marginHomeSuptitulo"
                        android:layout_marginRight="@dimen/marginHomeSuptitulo"
                        android:text="@string/text_info_title"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/tamanioTitulo"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/marginHomeSuptitulo"
                        android:layout_marginTop="@dimen/marginHomeSuptitulo"
                        android:layout_marginRight="@dimen/marginHomeSuptitulo"
                        android:text="@string/text_info_detail_title"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/tamanioSubtitulo" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_parrafo"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/imageViewHome"
                        android:scaleType="centerCrop"
                        android:src="@drawable/apicultura_infocampo" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/marginHomeSuptitulo"
                        android:layout_marginTop="@dimen/marginHomeSuptitulo"
                        android:layout_marginRight="@dimen/marginHomeSuptitulo"
                        android:text="@string/text_info_title2"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/tamanioTitulo"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/marginHomeSuptitulo"
                        android:layout_marginTop="@dimen/marginHomeSuptitulo"
                        android:layout_marginRight="@dimen/marginHomeSuptitulo"
                        android:text="@string/text_info_detail_title2"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/tamanioSubtitulo" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_parrafo"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/imageViewHome"
                        android:scaleType="centerCrop"
                        android:src="@drawable/abejas" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/marginHomeSuptitulo"
                        android:layout_marginTop="@dimen/marginHomeSuptitulo"
                        android:layout_marginRight="@dimen/marginHomeSuptitulo"
                        android:text="@string/text_info_title3"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/tamanioTitulo"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorPrimary" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/marginHomeSuptitulo"
                        android:layout_marginTop="@dimen/marginHomeSuptitulo"
                        android:layout_marginRight="@dimen/marginHomeSuptitulo"
                        android:text="@string/text_info_detail_title3"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/tamanioSubtitulo" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>


</FrameLayout>